--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /02_express/node_modules
 02_express/.env
 /03_youtubProjectDataBase/node_modules
+/03_youtubProjectDataBase/src/.env
+03_youtubProjectDataBase/.env
