--- a/03_youtubProjectDataBase/package.json
+++ b/03_youtubProjectDataBase/package.json
@@ -21,6 +21,8 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.1"
   }
